Adding movie creates overlapping audio strips #40373

Closed
opened 2014-05-26 22:40:52 +02:00 by Willi · 5 comments

System Information
Win7/64

Blender Version
blender-2.70-7fb33e5-win64

Short description of error
Adding a movie containing video+audio adds the audio strip to an already used channel.

Exact steps for others to reproduce the error

  • In the VSE, add a movie file containing both, video and audio.
  • Do the same again. Result: The audio strips of both video files are placed at channel 1.

Before adding second movie:
Bild_335.PNG

After adding second movie:
Bild_334.png

There's no difference in adding the movies via menu (Add->movie) or via drag&drop

Thank you in adavance.

**System Information** Win7/64 **Blender Version** blender-2.70-7fb33e5-win64 **Short description of error** Adding a movie containing video+audio adds the audio strip to an already used channel. **Exact steps for others to reproduce the error** - In the VSE, add a movie file containing both, video and audio. - Do the same again. Result: The audio strips of both video files are placed at channel 1. Before adding second movie: ![Bild_335.PNG](https://archive.blender.org/developer/F91253/Bild_335.PNG) After adding second movie: ![Bild_334.png](https://archive.blender.org/developer/F91255/Bild_334.png) There's no difference in adding the movies via menu (Add->movie) or via drag&drop Thank you in adavance.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

This issue was referenced by 13b81c84a0

This issue was referenced by 13b81c84a0d6ee4358f9393da5c130f026203b62

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 13b81c84a0.

Closed by commit 13b81c84a0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40373
No description provided.