Fix T40373: Adding movie creates overlapping audio strips